--- a/src/components/SideBar/Sidebar.css
+++ b/src/components/SideBar/Sidebar.css
@@ -1,8 +1,10 @@
 .list-gp {
-  border: 1px solid grey;
+  border: 1px solid #d55e43;
+  /* border: 1px solid white; */
   padding: 10px;
   border-radius: 5px;
   font-weight: bold;
+  /* color: white; */
 }
 
 .list-group-hover:hover {
